bhushan::changes in top-up, webcam params

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-details/loan-details.component.html
@@ -82,7 +82,7 @@
                             <button mat-menu-item (click)="topUp(loan)">Top Up</button>
                             <button mat-menu-item (click)="partPayment(loan)">Part Payment</button>
                             <button mat-menu-item (click)="partRelease(loan)">Part Release</button>
-                            <button mat-menu-item (click)="new(loan)">Add New Loan</button>
+                            <button mat-menu-item (click)="newLoan(loan)">Add New Loan</button>
                         </mat-menu>
 
                         <!-- <button mat-icon-button class="btn-transparent" ngbDropdown>
