--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/top-up/top-up.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/top-up/top-up.component.html
@@ -96,31 +96,40 @@
                     <div class="table-div table-responsive kt-padding-t-15">
                         <table class="table outer-border">
                             <thead>
-                                <th class="transparent" style="width: 100px;">Loan ID</th>
-                                <th class="transparent">Customer Name</th>
+                                <th class="transparent" style="width: 150px;">Customer Name</th>
                                 <th class="transparent">Mobile Number</th>
                                 <th class="transparent">Email ID </th>
                                 <th class="transparent" style="width: 100px;">Top up Date</th>
-                                <th class="transparent" style="width: 100px;">Processing Charges</th>
+                                <th class="transparent" style="width: 100px;">Top up Amount</th>
+                                <th class="transparent" style="width: 180px;">Principal Outstanding Amount</th>
+                                <th class="transparent">Last Paymnet Date</th>
+                                <th class="transparent" style="width: 100px;">Interest Amount</th>
+                                <th class="transparent" style="width: 100px;">Penal Interest </th>
+
+
                                 <th class="transparent">New Loan Amount</th>
                                 <th class="transparent" style="width: 100px;">Net Amount</th>
                                 <th class="transparent last">Select Payment Option</th>
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>LAG5348</td>
                                     <td>Amit Tannir</td>
                                     <td>9623466234</td>
                                     <td>amittannir@gmail.com</td>
                                     <td>21 Jan 2020</td>
-                                    <td>500</td>
+                                    <td>5500</td>
+                                    <td>4,25,000</td>
+                                    <td>21 Nov 2020</td>
+                                    <td>8500</td>
+                                    <td>2500</td>
                                     <td>2,95,000</td>
                                     <td>1,20,000</td>
                                     <td class="last">
                                         <select class="form-control">
                                             <option value="" selected disabled>Select Payment</option>
-                                            <option value="bank">Bank Transfer</option>
-                                            <option value="cash">Cash</option>
+                                            <option value="cash">CASH</option>
+                                            <option value="bank">RTGS/NEFT/IMPS</option>
+                                            <option value="cheque">CHEQUE</option>
                                         </select>
                                     </td>
                                 </tr>
