--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/un-secured-scheme/un-secured-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/un-secured-scheme/un-secured-scheme.component.html
@@ -77,7 +77,7 @@
                             <td *ngIf="!approved">{{data.paymentType | uppercase}}&nbsp;{{idx+1}}</td>
 
                             <td class="text-center currency">
-                                {{data.unsecuredIntrestAmount | indianCurrencyFormat}}
+                                {{data.unsecuredInterestAmount | indianCurrencyFormat}}
                             </td>
 
                         </tr>
