--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/interest-calculator/interest-calculator.component.html
@@ -93,7 +93,7 @@
                                 <small>Entered amount exceeds loan criteria</small>
                             </mat-error>
                             <mat-error *ngIf="controls.finalLoanAmount.errors?.eligible">
-                                <small>Entered  Amount is less Eligible Amount</small>
+                                <small>Entered  Amount is greater than Eligible Amount</small>
                             </mat-error><mat-error *ngIf="controls.finalLoanAmount.errors?.mimimumAmt">
                                 <small>Entered  Amount is less minimum loan amount</small>
                             </mat-error>
@@ -258,11 +258,11 @@
                                     <td *ngIf="!approved">{{data.paymentType | uppercase}}&nbsp;{{idx+1}}</td>
 
                                     <td class="text-center currency">
-                                        {{data.securedIntrestAmount | indianCurrencyFormat}}
+                                        {{data.securedInterestAmount | indianCurrencyFormat}}
                                     </td>
 
                                     <td class="text-center currency" *ngIf="controls.isUnsecuredSchemeApplied.value">
-                                        {{data.unsecuredIntrestAmount | indianCurrencyFormat}}
+                                        {{data.unsecuredInterestAmount | indianCurrencyFormat}}
                                     </td>
 
                                     <td class="text-center currency" *ngIf="controls.isUnsecuredSchemeApplied.value">
