--- a/gold-admin-frontend/src/app/views/partials/components/pdf-viewer/pdf-viewer.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/pdf-viewer/pdf-viewer.component.html
@@ -1,4 +1,4 @@
-<div>
-    <pdf-viewer [src]="data.value" [fit-to-page] [render-text]="true" (on-progress)="onProgress($event)"
-        [original-size]="false" [autoresize]="true" style="display: block;"></pdf-viewer>
+<div class="height"> 
+    <pdf-viewer [src]="pdfSrc" [fit-to-page] [render-text]="true" (on-progress)="onProgress($event)"
+        [original-size]="false" [autoresize]="true" style="display: block;" [page]="page" [show-all]="showAll"></pdf-viewer>
 </div>
