--- a/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/funds-approvals/deposit-list/deposit-list.component.html
@@ -1,24 +1,62 @@
-<!-- <kt-portlet>
+<kt-portlet>
     <kt-portlet-body>
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource">
 
-                <ng-container matColumnDef="occupation">
-                    <mat-header-cell *matHeaderCellDef>Occupation</mat-header-cell>
+                <ng-container matColumnDef="transactionId">
+                    <mat-header-cell *matHeaderCellDef>Transaction ID</mat-header-cell>
                     <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="action">
-                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
-                    <mat-cell *matCellDef="let item">
-                        <div [ngStyle]="{'display': 'inherit'}" *ngIf="item.description !== 'Other'">
-                            <span class="kt-pointer" (click)="editOccupation(item)">Edit</span>
-                            <div class="px-2">|</div>
-                            <span class="kt-pointer text-danger" (click)="deleteOccupation(item)">Delete</span>
-                        </div>
-                    </mat-cell>
+                <ng-container matColumnDef="bankTransactionId">
+                    <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="customerId">
+                    <mat-header-cell *matHeaderCellDef>Customer ID</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="loanId">
+                    <mat-header-cell *matHeaderCellDef>Loan ID</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="depositDate">
+                    <mat-header-cell *matHeaderCellDef>Deposit Date</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="fullName">
+                    <mat-header-cell *matHeaderCellDef>Full Name</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="mobileNumber">
+                    <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="modeOfPayment">
+                    <mat-header-cell *matHeaderCellDef>Mode of Payment</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="depositBankName">
+                    <mat-header-cell *matHeaderCellDef>Deposit Bank Name</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="depositAmount">
+                    <mat-header-cell *matHeaderCellDef>Deposit Amount</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="depositStatus">
+                    <mat-header-cell *matHeaderCellDef>Deposit Status</mat-header-cell>
+                    <mat-cell *matCellDef="let item">{{item.name | titlecase}}</mat-cell>
+                </ng-container>
 
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -34,4 +72,4 @@
                 [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
         </div>
     </kt-portlet-body>
-</kt-portlet> -->
+</kt-portlet>
